# address_change_api

./: .gitignore  Dockerfile  Makefile  Readme.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: common.py  manage.py
app/address/: admin.py  apps.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
app/address/errors/: consumer_exceptions.py
app/address/migrations/: 0001_initial.py
app/address/templates/: index.html
app/address/templates/address/: error.html  index.html  signin.html  signup.html
app/address/templates/auth/: auth.html  signup.html  userInfo.html
app/app/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
app/app/settings/: base.py  develop.py  local.py
app/static/css/: style.css
app/static/js/: cookies.js  notify.min.js
app/todo/: models.py  serializers.py  urls.py  views.py
app/todo/migrations/: 0001_initial.py  0002_auto_20210612_0015.py  0003_auto_20210612_1449.py  0004_auto_20210612_1449.py  0005_todo_highlight.py  0006_todo_user_id.py  0007_todo_do_yn.py
app/todo/templates/: index.html
app/todo/templates/todo/: base.html  index.html
app/utils/: token.py
config/nginx/: nginx.conf
