[tool.poetry]
name = "address_change_api"
version = "0.1.0"
description = ""
authors = ["Nakyungwon <saecomaster@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.0.5"
gunicorn = "20.1.0"
pytz = "2021.1"
django-cors-headers = "3.7.0"
PyMySQL = "^1.0.2"
django-bootstrap4 = "^3.0.1"
selenium = "^3.141.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
beautifulsoup4 = "^4.9.3"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
